# Wsciekle-Ptaki-

./: CMakeLists.txt  FizycznyDebbugger.h  FizycznyObiekt.h  GameOver.h  MenuPauzy.h  ObslugaProcy.h  README.md  SpecjalnePtaki.h  SystemKolizji.h  guimain.h  ksztalty.cpp  ksztalty.h  lvl11.h  lvl2.h  lvl3.h  main.cpp  menubuttons.h  obiekt.cpp  obiekt.h  panellvl.h  silnik_fizyczny.cpp  silnik_fizyczny.h  silnik_obrazen.cpp  silnik_obrazen.h
